<resources>
    <string name="app_name">签到管理</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <!--登录相关-->
    <string name="user_name">用户名</string>
    <string name="user_id">学号/职工号</string>
    <string name="pass_word">密码</string>
    <string name="student">学生</string>
    <string name="teacher">教师</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="invalid_user_name">无效的用户名</string>
    <string name="invalid_user_id">无效的号码</string>
    <string name="invalid_password">无效的密码</string>
    <string name="please_check_info">信息有误，请修改后重试!</string>
    <string name="id_exist">该id已存在!</string>
    <string name="invalid_information">无效的用户名或密码</string>
    <string name="select_occupation">请选择职业</string>
    <string name="wrong_user_name_or_password">错误的用户名或密码</string>
    <string name="no_that_user">没有查询到该用户</string>
    <string name="register_succeed">注册成功，请使用该账户登录</string>

    <!--学生主页-->
    <string name="welcome">，欢迎你</string>
    <string name="student_sign">签到</string>
    <string name="student_leave">请假</string>
    <string name="student_attendance">考勤</string>
    <string name="setting">设置</string>
    <string name="personal_info">个人信息</string>
    <string name="update_password">修改密码</string>
    <string name="last_password">旧密码:</string>
    <string name="new_password">新密码:</string>
    <string name="wrong_password">密码错误!</string>
    <string name="password_cannot_be_empty">密码不能为空!</string>
    <string name="student_not_exist">该学生不存在!</string>
    <string name="update_success">修改成功</string>

    <!--教师主页-->
    <string name="attendance_check">考勤统计</string>
    <string name="course_management">课程管理</string>
    <string name="add_course">添加课程</string>
    <string name="change_current_week">修改当前周</string>
    <string name="delete_course">删除课程</string>
    <string name="course_number">课程号码</string>
    <string name="course_name">课程名称</string>
    <string name="day_of_week">上课日期</string>
    <string name="time_frame">时间范围</string>
</resources>
