<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_gravity="center"
        app:cardElevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/update_password"
                android:textSize="@dimen/dp_16"
                android:textColor="@color/color_2F2F2F" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_password"
                    android:textSize="@dimen/dp_14"
                    android:textColor="@color/color_2F2F2F" />

                <EditText
                    android:id="@+id/et_old_student_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_password"
                    android:textSize="@dimen/dp_14"
                    android:textColor="@color/color_2F2F2F" />

                <EditText
                    android:id="@+id/et_new_student_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/dp_16"
                android:paddingStart="@dimen/dp_12"
                android:paddingEnd="@dimen/dp_12"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_update_password_ok"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/ok"
                    android:textSize="@dimen/dp_16"
                    android:textColor="@color/color_2F2F2F"
                    android:background="@drawable/bg_rd8_str1_008577" />

                <Button
                    android:id="@+id/btn_update_password_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:textSize="@dimen/dp_16"
                    android:textColor="@color/color_2F2F2F"
                    android:layout_marginStart="@dimen/dp_24"
                    android:background="@drawable/bg_rd8_str1_008577" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>