<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_course_management_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:gravity="center_vertical"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_course_manage_back"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:src="@drawable/back_left_black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:textColor="@color/color_FFFFFF"
            android:text="@string/course_management" />

        <ImageView
            android:id="@+id/iv_teacher_add_course"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:src="@drawable/add"
            android:scaleType="centerCrop"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/dp_8" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="100dp"
            android:background="@drawable/bg_rd8_008577"
            android:text="@string/add_course"
            android:textSize="18dp"
            android:textColor="@color/color_FFFFFF" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_rd8_008577"
            android:text="@string/delete_course"
            android:textSize="18dp"
            android:textColor="@color/color_FFFFFF" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>