<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:textColor="@color/color_FFFFFF"
            android:text="@string/login_register" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_gravity="center"
        app:cardElevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="12dp"
                android:src="@drawable/logo_big"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:layout_marginTop="24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:imeOptions="actionNext" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass_word"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="?colorPrimary"
                    android:layout_marginTop="24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/group_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="24dp">

                    <RadioButton
                        android:id="@+id/rb_student"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/student"
                        android:textColor="@color/colorPrimary" />

                    <RadioButton
                        android:id="@+id/rb_teacher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/teacher"
                        android:textColor="@color/colorPrimary" />
                </RadioGroup>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_rd8_008577"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18dp"
                    android:gravity="center"
                    android:text="@string/login"
                    android:layout_marginEnd="100dp"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_register"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_rd8_008577"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:text="@string/register"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_login"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>